--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -448,7 +448,9 @@ h6 {
  .banner-area div {
      height: 100%;
 }
-
+ .banner-area-another{
+     max-height: 350px!important;
+ }
 .banner-area {
     overflow: hidden;
 }
@@ -471,7 +473,7 @@ h6 {
 }
 .banner-area .carousel-item h1 {
     line-height: 1;
-    font-size: 120px;
+    font-size: 60px;
     font-weight: 700;
     text-transform: capitalize;
 }
@@ -2734,7 +2736,7 @@ footer .info .meta-title a {
      width: 100%;
      height: 100%;
      z-index: 999999;
-     background: url(assets/img/preloader.gif) center no-repeat #fff;
+     background: url('../img/preloader.gif') center no-repeat #fff;
      text-align: center;
 }
  
